src/objects/Sample_Parent__c/fields/AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>AutoNumber__c</fullName>
    <displayFormat>AUTO-{0000}</displayFormat>
    <label>AutoNumber</label>
    <type>AutoNumber</type>
</CustomField>