src/objects/Sample_Parent__c/fields/Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Encrypted__c</fullName>
    <label>Encrypted</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>