src/objects/Sample_Parent__c/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <label>Geolocation</label>
    <scale>0</scale>
    <type>Location</type>
</CustomField>