src/objects/Sample_Parent__c/fields/LongText__c.field-meta.xml
<CustomField>
    <fullName>LongText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LongText</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>