src/objects/Sample_Parent__c/fields/RichText__c.field-meta.xml
<CustomField>
    <fullName>RichText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RichText</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>