src/objects/Sample_Parent__c/fields/RollupSum__c.field-meta.xml
<CustomField>
    <fullName>RollupSum__c</fullName>
    <label>RollupSum</label>
    <summarizedField>Sample_Child__c.Number__c</summarizedField>
    <summaryForeignKey>Sample_Child__c.Sample_Parent__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>