src/objects/Sample_Parent__c/fields/TextArea__c.field-meta.xml
<CustomField>
    <fullName>TextArea__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TextArea</label>
    <type>TextArea</type>
</CustomField>